[package]
name = "ksearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmlescape = "0.3.1"
lazy_static = "1.4.0"
regex = "1.5.6"
reqwest = "0.11.11"
rusqlite = "0.27.0"
sha2 = "0.10.2"
tokio = { version = "1.19.2", features = [ "full" ] }
